--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -64,3 +64,11 @@
         margin-left: 30%;
       }
 }
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+ 
+}
