--- a/css/style.css
+++ b/css/style.css
@@ -324,3 +324,10 @@ a {
     .main-content {
       margin-top: 25%;
       margin-left: 30%; } }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%; }
