--- a/css/style.css
+++ b/css/style.css
@@ -266,10 +266,33 @@ a {
     .search__field:focus {
       outline: none; }
     .search__field::placeholder {
-      color: var(color-grey-light-3); }
+      color: var(--placeholder-text); }
   .search__btn {
     font-weight: 600;
     font-family: inherit; }
+
+input[type="text"] {
+  width: 50%;
+  height: 50px;
+  outline: none;
+  border-radius: 10px;
+  border: none;
+  background-color: var(--app-background);
+  padding: 10px 10px;
+  font-size: 16px; }
+  input[type="text"]::placeholder {
+    color: var(--placeholder-text); }
+
+.content {
+  width: 50%;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .content__btn {
+    width: 20%;
+    height: 40px; }
 
 .app-container {
   background-color: var(--app-background);
@@ -330,4 +353,5 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%; }
+  height: 100%;
+  width: 100%; }
