--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -258,7 +258,7 @@
       }
   
       &::placeholder {
-        color: var(color-grey-light-3);
+        color: var(--placeholder-text);
       }
   /*
       @media only screen and (max-width: $bp-medium) {
@@ -275,4 +275,38 @@
         font-family: inherit;
       }
     }
-  
+
+  input[type="text"]{
+      width: 50%;
+      height: 50px;
+      outline: none;
+      border-radius: 10px;
+      border: none;
+      background-color: var(--app-background);
+      padding: 10px 10px;
+      font-size: 16px;
+      &::placeholder {
+        color: var(--placeholder-text);
+      }
+  }  
+  .content{
+   width: 50%;
+   margin-top: 20px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+    &__firstName{
+
+    }
+    &__lastName{
+
+    }
+    &__email{
+
+    }
+    &__btn{
+     width: 20%;
+     height: 40px;
+    }
+  }
